--- a/hyperapp/guesser/runner.resources.yaml
+++ b/hyperapp/guesser/runner.resources.yaml
@@ -1,8 +1,8 @@
 import:
-  - legacy_service:association_reg
-  - legacy_service:mosaic
-  - legacy_service:types
-  - legacy_service:python_object_creg
+  - builtin_service:association_reg
+  - builtin_service:mosaic
+  - builtin_service:types
+  - builtin_service:python_object_creg
   - legacy_type.builtin:attribute
   - legacy_type.call:call
   - legacy_type.import_discoverer:using_incomplete_object
@@ -42,10 +42,10 @@ definitions:
       htypes.inspect.list_t: legacy_type.inspect:list_t
       htypes.inspect.empty_list_t: legacy_type.inspect:empty_list_t
       htypes.inspect.coroutine_t: legacy_type.inspect:coroutine_t
-      services.association_reg: legacy_service:association_reg
-      services.mosaic: legacy_service:mosaic
-      services.types: legacy_service:types
-      services.python_object_creg: legacy_service:python_object_creg
+      services.association_reg: builtin_service:association_reg
+      services.mosaic: builtin_service:mosaic
+      services.types: builtin_service:types
+      services.python_object_creg: builtin_service:python_object_creg
       constants: resource.constants:constants.module
 
   collect_attributes:
