--- a/hyperapp/common/bundler.resources.yaml
+++ b/hyperapp/common/bundler.resources.yaml
@@ -5,9 +5,9 @@
 import:
 - common.mark:mark.service
 - common.visitor:visitor.module
-- legacy_service:association_reg
-- legacy_service:mosaic
-- legacy_service:types
+- builtin_service:association_reg
+- builtin_service:mosaic
+- builtin_service:types
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
@@ -30,10 +30,10 @@ definitions:
     file_name: bundler.dyn.py
     import_list:
       code.visitor: common.visitor:visitor.module
-      services.association_reg: legacy_service:association_reg
+      services.association_reg: builtin_service:association_reg
       services.mark: common.mark:mark.service
-      services.mosaic: legacy_service:mosaic
-      services.types: legacy_service:types
+      services.mosaic: builtin_service:mosaic
+      services.types: builtin_service:types
   bundler.service:
     _type: legacy_type.call:call
     function: bundler
