--- a/hyperapp/guesser/code_registry_ctr.resources.yaml
+++ b/hyperapp/guesser/code_registry_ctr.resources.yaml
@@ -1,6 +1,6 @@
 import:
 - resource.constructor_creg:constructor_creg.service
-- legacy_service:mosaic
+- builtin_service:mosaic
 - legacy_type.builtin:attribute
 - legacy_type.code_registry:association
 - legacy_type.code_registry:constructor
@@ -22,7 +22,7 @@ definitions:
     import_list:
       htypes.builtin.attribute: legacy_type.builtin:attribute
       htypes.code_registry.association: legacy_type.code_registry:association
-      services.mosaic: legacy_service:mosaic
+      services.mosaic: builtin_service:mosaic
 
   construct:
     _type: legacy_type.builtin:attribute
