--- a/hyperapp/guesser/global_command_ctr.resources.yaml
+++ b/hyperapp/guesser/global_command_ctr.resources.yaml
@@ -4,8 +4,8 @@
 
 import:
 - guesser.utils:utils.module
-- legacy_service:mosaic
-- legacy_service:types
+- builtin_service:mosaic
+- builtin_service:types
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.code_registry:association
@@ -34,5 +34,5 @@ definitions:
       htypes.global_command_ctr.global_command_ctr: legacy_type.global_command_ctr:global_command_ctr
       htypes.impl.global_command_impl: legacy_type.impl:global_command_impl
       services.constructor_creg: resource.constructor_creg:constructor_creg.service
-      services.mosaic: legacy_service:mosaic
-      services.types: legacy_service:types
+      services.mosaic: builtin_service:mosaic
+      services.types: builtin_service:types
