--- a/hyperapp/guesser/import_discoverer.resources.yaml
+++ b/hyperapp/guesser/import_discoverer.resources.yaml
@@ -1,5 +1,5 @@
 import:
-  - legacy_service:python_object_creg
+  - builtin_service:python_object_creg
   - legacy_type.builtin:attribute
   - legacy_type.import_discoverer:import_discoverer
   - legacy_type.import_discoverer:using_incomplete_object
@@ -20,7 +20,7 @@ definitions:
     file_name: import_discoverer.dyn.py
     import_list:
       htypes.import_discoverer.using_incomplete_object: legacy_type.import_discoverer:using_incomplete_object
-      services.python_object_creg: legacy_service:python_object_creg
+      services.python_object_creg: builtin_service:python_object_creg
 
   ImportDiscoverer:
     _type: legacy_type.builtin:attribute
