--- a/hyperapp/guesser/object_command_ctr.resources.yaml
+++ b/hyperapp/guesser/object_command_ctr.resources.yaml
@@ -4,8 +4,8 @@
 
 import:
 - guesser.utils:utils.module
-- legacy_service:mosaic
-- legacy_service:types
+- builtin_service:mosaic
+- builtin_service:types
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.code_registry:association
@@ -36,5 +36,5 @@ definitions:
       htypes.lcs.lcs_set_association: legacy_type.lcs:lcs_set_association
       htypes.object_command_ctr.object_command_ctr: legacy_type.object_command_ctr:object_command_ctr
       services.constructor_creg: resource.constructor_creg:constructor_creg.service
-      services.mosaic: legacy_service:mosaic
-      services.types: legacy_service:types
+      services.mosaic: builtin_service:mosaic
+      services.types: builtin_service:types
