--- a/hyperapp/guesser/service_ctr.fixtures.resources.yaml
+++ b/hyperapp/guesser/service_ctr.fixtures.resources.yaml
@@ -4,8 +4,8 @@
 
 import:
 - common.mark:mark.service
-- legacy_service:resource_module_factory
-- legacy_service:resource_registry_factory
+- builtin_service:resource_module_factory
+- builtin_service:resource_registry_factory
 - legacy_type.attr_constructors:service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
@@ -57,5 +57,5 @@ definitions:
       htypes.builtin.python_module: legacy_type.builtin:python_module
       htypes.inspect.attr: legacy_type.inspect:attr
       services.mark: common.mark:mark.service
-      services.resource_module_factory: legacy_service:resource_module_factory
-      services.resource_registry_factory: legacy_service:resource_registry_factory
+      services.resource_module_factory: builtin_service:resource_module_factory
+      services.resource_registry_factory: builtin_service:resource_registry_factory
