--- a/hyperapp/guesser/service_ctr.resources.yaml
+++ b/hyperapp/guesser/service_ctr.resources.yaml
@@ -4,7 +4,7 @@
 
 import:
 - common.mark:mark.service
-- legacy_service:mosaic
+- builtin_service:mosaic
 - legacy_type.attr_constructors:service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
@@ -31,4 +31,4 @@ definitions:
       htypes.call.call: legacy_type.call:call
       services.constructor_creg: resource.constructor_creg:constructor_creg.service
       services.mark: common.mark:mark.service
-      services.mosaic: legacy_service:mosaic
+      services.mosaic: builtin_service:mosaic
