--- a/hyperapp/resource/fn_to_ref.resources.yaml
+++ b/hyperapp/resource/fn_to_ref.resources.yaml
@@ -4,8 +4,8 @@
 
 import:
 - common.mark:mark.service
-- legacy_service:mosaic
-- legacy_service:python_object_creg
+- builtin_service:mosaic
+- builtin_service:python_object_creg
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
@@ -22,8 +22,8 @@ definitions:
     import_list:
       htypes.builtin.attribute: legacy_type.builtin:attribute
       services.mark: common.mark:mark.service
-      services.mosaic: legacy_service:mosaic
-      services.python_object_creg: legacy_service:python_object_creg
+      services.mosaic: builtin_service:mosaic
+      services.python_object_creg: builtin_service:python_object_creg
   fn_to_ref.service:
     _type: legacy_type.call:call
     function: fn_to_ref
