--- a/hyperapp/resource/partial.resources.yaml
+++ b/hyperapp/resource/partial.resources.yaml
@@ -1,5 +1,5 @@
 import:
-- legacy_service:python_object_creg
+- builtin_service:python_object_creg
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_object_association
 - legacy_type.builtin:python_module
@@ -14,7 +14,7 @@ definitions:
     module_name: partial
     file_name: partial.dyn.py
     import_list:
-      services.python_object_creg: legacy_service:python_object_creg
+      services.python_object_creg: builtin_service:python_object_creg
   python_object:
     _type: legacy_type.builtin:attribute
     object: partial.module
