--- a/hyperapp/resource/raw.resources.yaml
+++ b/hyperapp/resource/raw.resources.yaml
@@ -1,5 +1,5 @@
 import:
-- legacy_service:web
+- builtin_service:web
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_object_association
 - legacy_type.builtin:python_module
@@ -14,7 +14,7 @@ definitions:
     module_name: raw
     file_name: raw.dyn.py
     import_list:
-      services.web: legacy_service:web
+      services.web: builtin_service:web
   python_object:
     _type: legacy_type.builtin:attribute
     object: raw.module
