--- a/hyperapp/rpc/rpc_endpoint.resources.yaml
+++ b/hyperapp/rpc/rpc_endpoint.resources.yaml
@@ -4,11 +4,11 @@
 
 import:
 - common.mark:mark.service
-- legacy_service:mosaic
-- legacy_service:on_stop
-- legacy_service:python_object_creg
-- legacy_service:types
-- legacy_service:web
+- builtin_service:mosaic
+- builtin_service:on_stop
+- builtin_service:python_object_creg
+- builtin_service:types
+- builtin_service:web
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
@@ -34,13 +34,13 @@ definitions:
       htypes.rpc.server_error: legacy_type.rpc:server_error
       htypes.rpc_endpoint_tests.sample_error: legacy_type.rpc_endpoint_tests:sample_error
       services.mark: common.mark:mark.service
-      services.mosaic: legacy_service:mosaic
-      services.on_stop: legacy_service:on_stop
+      services.mosaic: builtin_service:mosaic
+      services.on_stop: builtin_service:on_stop
       services.peer_registry: transport.identity:peer_registry.service
-      services.python_object_creg: legacy_service:python_object_creg
+      services.python_object_creg: builtin_service:python_object_creg
       services.transport: transport.transport:transport.service
-      services.types: legacy_service:types
-      services.web: legacy_service:web
+      services.types: builtin_service:types
+      services.web: builtin_service:web
   rpc_endpoint_factory:
     _type: legacy_type.builtin:attribute
     object: rpc_endpoint.module
