--- a/hyperapp/server/announce_provider.fixtures.resources.yaml
+++ b/hyperapp/server/announce_provider.fixtures.resources.yaml
@@ -4,8 +4,8 @@
 
 import:
 - common.mark:mark.service
-- legacy_service:generate_rsa_identity
-- legacy_service:mosaic
+- builtin_service:generate_rsa_identity
+- builtin_service:mosaic
 - legacy_type.builtin:attribute
 - legacy_type.call:call
 - legacy_type.builtin:python_module
@@ -16,9 +16,9 @@ definitions:
     module_name: announce_provider.fixtures
     file_name: announce_provider.fixtures.dyn.py
     import_list:
-      services.generate_rsa_identity: legacy_service:generate_rsa_identity
+      services.generate_rsa_identity: builtin_service:generate_rsa_identity
       services.mark: common.mark:mark.service
-      services.mosaic: legacy_service:mosaic
+      services.mosaic: builtin_service:mosaic
   aux_bundler_hook.ref.parameter:
     _type: legacy_type.call:call
     function: ref
