--- a/hyperapp/server/identity.resources.yaml
+++ b/hyperapp/server/identity.resources.yaml
@@ -4,9 +4,9 @@
 
 import:
 - common.mark:mark.service
-- legacy_service:file_bundle
-- legacy_service:generate_rsa_identity
-- legacy_service:identity_registry
+- builtin_service:file_bundle
+- builtin_service:generate_rsa_identity
+- builtin_service:identity_registry
 - legacy_type.builtin:attribute
 - legacy_type.call:call
 - legacy_type.builtin:python_module
@@ -17,9 +17,9 @@ definitions:
     module_name: identity
     file_name: identity.dyn.py
     import_list:
-      services.file_bundle: legacy_service:file_bundle
-      services.generate_rsa_identity: legacy_service:generate_rsa_identity
-      services.identity_registry: legacy_service:identity_registry
+      services.file_bundle: builtin_service:file_bundle
+      services.generate_rsa_identity: builtin_service:generate_rsa_identity
+      services.identity_registry: builtin_service:identity_registry
       services.mark: common.mark:mark.service
   server_identity:
     _type: legacy_type.builtin:attribute
