--- a/hyperapp/stash/local_server.resources.yaml
+++ b/hyperapp/stash/local_server.resources.yaml
@@ -4,7 +4,7 @@
 
 import:
 - common.mark:mark.service
-- legacy_service:file_bundle
+- builtin_service:file_bundle
 - legacy_type.builtin:attribute
 - legacy_type.call:call
 - legacy_type.builtin:python_module
@@ -15,7 +15,7 @@ definitions:
     module_name: local_server
     file_name: local_server.dyn.py
     import_list:
-      services.file_bundle: legacy_service:file_bundle
+      services.file_bundle: builtin_service:file_bundle
       services.mark: common.mark:mark.service
   local_server_ref:
     _type: legacy_type.builtin:attribute
