--- a/hyperapp/subprocess/subprocess.resources.yaml
+++ b/hyperapp/subprocess/subprocess.resources.yaml
@@ -5,7 +5,7 @@
 import:
 - common.bundler:bundler.service
 - common.mark:mark.service
-- legacy_service:mosaic
+- builtin_service:mosaic
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
@@ -18,7 +18,7 @@ definitions:
     import_list:
       services.bundler: common.bundler:bundler.service
       services.mark: common.mark:mark.service
-      services.mosaic: legacy_service:mosaic
+      services.mosaic: builtin_service:mosaic
   subprocess_running:
     _type: legacy_type.builtin:attribute
     object: subprocess.module
