--- a/hyperapp/subprocess/subprocess_transport.resources.yaml
+++ b/hyperapp/subprocess/subprocess_transport.resources.yaml
@@ -6,10 +6,10 @@ import:
 - common.bundler:bundler.service
 - common.failure:failed.service
 - common.mark:mark.service
-- legacy_service:mosaic
-- legacy_service:on_stop
-- legacy_service:stop_signal
-- legacy_service:unbundler
+- builtin_service:mosaic
+- builtin_service:on_stop
+- builtin_service:stop_signal
+- builtin_service:unbundler
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
@@ -33,10 +33,10 @@ definitions:
       services.bundler: common.bundler:bundler.service
       services.failed: common.failure:failed.service
       services.mark: common.mark:mark.service
-      services.mosaic: legacy_service:mosaic
-      services.on_stop: legacy_service:on_stop
+      services.mosaic: builtin_service:mosaic
+      services.on_stop: builtin_service:on_stop
       services.parcel_registry: transport.identity:parcel_registry.service
       services.route_table: transport.sync_route_table:route_table.service
-      services.stop_signal: legacy_service:stop_signal
+      services.stop_signal: builtin_service:stop_signal
       services.transport: transport.transport:transport.service
-      services.unbundler: legacy_service:unbundler
+      services.unbundler: builtin_service:unbundler
