--- a/hyperapp/transport/endpoint.resources.yaml
+++ b/hyperapp/transport/endpoint.resources.yaml
@@ -5,9 +5,9 @@
 import:
 - common.failure:failed.service
 - common.mark:mark.service
-- legacy_service:mosaic
-- legacy_service:on_stop
-- legacy_service:unbundler
+- builtin_service:mosaic
+- builtin_service:on_stop
+- builtin_service:unbundler
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
@@ -21,10 +21,10 @@ definitions:
     import_list:
       services.failed: common.failure:failed.service
       services.mark: common.mark:mark.service
-      services.mosaic: legacy_service:mosaic
-      services.on_stop: legacy_service:on_stop
+      services.mosaic: builtin_service:mosaic
+      services.on_stop: builtin_service:on_stop
       services.route_table: transport.sync_route_table:route_table.service
-      services.unbundler: legacy_service:unbundler
+      services.unbundler: builtin_service:unbundler
   endpoint_registry:
     _type: legacy_type.builtin:attribute
     object: endpoint.module
