--- a/hyperapp/transport/sync_route_table.resources.yaml
+++ b/hyperapp/transport/sync_route_table.resources.yaml
@@ -5,8 +5,8 @@
 import:
 - common.bundler:aux_bundler_hooks.service
 - common.mark:mark.service
-- legacy_service:aux_unbundler_hooks
-- legacy_service:mosaic
+- builtin_service:aux_unbundler_hooks
+- builtin_service:mosaic
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
@@ -29,8 +29,8 @@ definitions:
     import_list:
       code.route_table: transport.route_table:route_table.module
       services.aux_bundler_hooks: common.bundler:aux_bundler_hooks.service
-      services.aux_unbundler_hooks: legacy_service:aux_unbundler_hooks
+      services.aux_unbundler_hooks: builtin_service:aux_unbundler_hooks
       services.mark: common.mark:mark.service
-      services.mosaic: legacy_service:mosaic
+      services.mosaic: builtin_service:mosaic
       services.peer_registry: transport.identity:peer_registry.service
       services.route_registry: transport.route_registry:route_registry.service
