--- a/hyperapp/transport/transport.resources.yaml
+++ b/hyperapp/transport/transport.resources.yaml
@@ -5,7 +5,7 @@
 import:
 - common.bundler:bundler.service
 - common.mark:mark.service
-- legacy_service:mosaic
+- builtin_service:mosaic
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
@@ -24,7 +24,7 @@ definitions:
     import_list:
       services.bundler: common.bundler:bundler.service
       services.mark: common.mark:mark.service
-      services.mosaic: legacy_service:mosaic
+      services.mosaic: builtin_service:mosaic
       services.route_registry: transport.route_registry:route_registry.service
       services.route_table: transport.sync_route_table:route_table.service
   transport.service:
