--- a/hyperapp/rc/global_command_ctr.resources.yaml
+++ b/hyperapp/rc/global_command_ctr.resources.yaml
@@ -5,7 +5,7 @@
 import:
 - builtin_service:mosaic
 - builtin_service:types
-- guesser.utils:utils.module
+- rc.utils:utils.module
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.code_registry:association
@@ -28,7 +28,7 @@ definitions:
     module_name: global_command_ctr
     file_name: global_command_ctr.dyn.py
     import_list:
-      code.utils: guesser.utils:utils.module
+      code.utils: rc.utils:utils.module
       htypes.builtin.attribute: legacy_type.builtin:attribute
       htypes.global_command.global_command_association: legacy_type.global_command:global_command_association
       htypes.global_command_ctr.global_command_ctr: legacy_type.global_command_ctr:global_command_ctr
