--- a/hyperapp/rc/object_command_ctr.resources.yaml
+++ b/hyperapp/rc/object_command_ctr.resources.yaml
@@ -5,7 +5,7 @@
 import:
 - builtin_service:mosaic
 - builtin_service:types
-- guesser.utils:utils.module
+- rc.utils:utils.module
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.code_registry:association
@@ -29,7 +29,7 @@ definitions:
     module_name: object_command_ctr
     file_name: object_command_ctr.dyn.py
     import_list:
-      code.utils: guesser.utils:utils.module
+      code.utils: rc.utils:utils.module
       htypes.builtin.attribute: legacy_type.builtin:attribute
       htypes.command.object_commands_d: legacy_type.command:object_commands_d
       htypes.impl.object_command_impl: legacy_type.impl:object_command_impl
