--- a/log-config/rc.yaml
+++ b/log-config/rc.yaml
@@ -18,14 +18,14 @@ handlers:
   file-debug:
     class : logging.handlers.RotatingFileHandler
     formatter: full
-    filename: /tmp/update-resources-debug.log
+    filename: /tmp/rc-debug.log
     maxBytes: 10485760  # 10M
     backupCount: 5
   file-info:
     class : logging.handlers.RotatingFileHandler
     level: INFO
     formatter: full
-    filename: /tmp/update-resources-info.log
+    filename: /tmp/rc-info.log
     maxBytes: 10485760  # 10M
     backupCount: 5
 
