--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ pytest==6.2.2
 pytest-asyncio==0.14.0
 aiomock
 ply==3.11
-pyside2==5.15.2
+PySide6==6.4.3
 qasync==0.21.0
 attrs==20.3.0  # fix pytest requirement
 
