--- a/hyperapp/rc/runner.resources.yaml
+++ b/hyperapp/rc/runner.resources.yaml
@@ -10,7 +10,7 @@ import:
   - legacy_type.inspect:attr
   - legacy_type.inspect:fn_attr
   - legacy_type.inspect:generator_fn_attr
-  - legacy_type.inspect:object_attributes
+  - legacy_type.inspect:object_info
   - legacy_type.inspect:type_name
   - legacy_type.inspect:item_element
   - legacy_type.inspect:none_t
@@ -35,7 +35,7 @@ definitions:
       htypes.inspect.attr: legacy_type.inspect:attr
       htypes.inspect.fn_attr: legacy_type.inspect:fn_attr
       htypes.inspect.generator_fn_attr: legacy_type.inspect:generator_fn_attr
-      htypes.inspect.object_attributes: legacy_type.inspect:object_attributes
+      htypes.inspect.object_info: legacy_type.inspect:object_info
       htypes.inspect.type_name: legacy_type.inspect:type_name
       htypes.inspect.item_element: legacy_type.inspect:item_element
       htypes.inspect.none_t: legacy_type.inspect:none_t
