--- a/hyperapp/rc/runner.resources.yaml
+++ b/hyperapp/rc/runner.resources.yaml
@@ -4,6 +4,7 @@ import:
   - builtin_service:mosaic
   - builtin_service:types
   - builtin_service:python_object_creg
+  - legacy_type.async_run:async_run
   - legacy_type.builtin:attribute
   - legacy_type.call:call
   - legacy_type.import_discoverer:using_incomplete_object
@@ -34,6 +35,7 @@ definitions:
     module_name: runner
     file_name: runner.dyn.py
     import_list:
+      htypes.async_run.async_run: legacy_type.async_run:async_run
       htypes.import_discoverer.using_incomplete_object: legacy_type.import_discoverer:using_incomplete_object
       htypes.inspect.attr: legacy_type.inspect:attr
       htypes.inspect.call_param: legacy_type.inspect:call_param
