--- a/hyperapp/ui/qt/window.resources.yaml
+++ b/hyperapp/ui/qt/window.resources.yaml
@@ -1,12 +1,16 @@
 # Automatically generated file. Do not edit.
 
 import:
+- builtin_service:web
 - legacy_type.builtin:python_module
 - legacy_type.command_pane:command_pane
 - legacy_type.menu_bar:menu_bar
+- legacy_type.window:app_layout
+- legacy_type.window:app_state
+- legacy_type.window:layout
 - legacy_type.window:pos
 - legacy_type.window:size
-- legacy_type.window:window
+- legacy_type.window:state
 associations: []
 definitions:
   window.module:
@@ -16,6 +20,10 @@ definitions:
     import_list:
       htypes.command_pane.command_pane: legacy_type.command_pane:command_pane
       htypes.menu_bar.menu_bar: legacy_type.menu_bar:menu_bar
+      htypes.window.app_layout: legacy_type.window:app_layout
+      htypes.window.app_state: legacy_type.window:app_state
+      htypes.window.layout: legacy_type.window:layout
       htypes.window.pos: legacy_type.window:pos
       htypes.window.size: legacy_type.window:size
-      htypes.window.window: legacy_type.window:window
+      htypes.window.state: legacy_type.window:state
+      services.web: builtin_service:web
