--- a/hyperapp/rc/ui_ctl.resources.yaml
+++ b/hyperapp/rc/ui_ctl.resources.yaml
@@ -1,6 +1,6 @@
-# Automatically generated file. Do not edit.
-
 import:
+- builtin_service:mosaic
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 associations: []
 definitions:
@@ -8,4 +8,6 @@ definitions:
     _type: legacy_type.builtin:python_module
     module_name: ui_ctl
     file_name: ui_ctl.dyn.py
-    import_list: {}
+    import_list:
+      htypes.builtin.attribute: legacy_type.builtin:attribute
+      services.mosaic: builtin_service:mosaic
