--- a/hyperapp/rc/ui_ctl.resources.yaml
+++ b/hyperapp/rc/ui_ctl.resources.yaml
@@ -1,7 +1,10 @@
 import:
 - builtin_service:mosaic
 - legacy_type.builtin:attribute
+- legacy_type.builtin:legacy_type
 - legacy_type.builtin:python_module
+- legacy_type.inspect:record_t
+- legacy_type.ui:ctl_association
 associations: []
 definitions:
   ui_ctl.module:
@@ -10,4 +13,7 @@ definitions:
     file_name: ui_ctl.dyn.py
     import_list:
       htypes.builtin.attribute: legacy_type.builtin:attribute
+      htypes.builtin.legacy_type: legacy_type.builtin:legacy_type
+      htypes.inspect.record_t: legacy_type.inspect:record_t
+      htypes.ui.ctl_association: legacy_type.ui:ctl_association
       services.mosaic: builtin_service:mosaic
