--- a/hyperapp/rc/global_command_ctr.resources.yaml
+++ b/hyperapp/rc/global_command_ctr.resources.yaml
@@ -5,17 +5,21 @@ import:
 - builtin_service:types
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
-- legacy_type.code_registry:association
 - legacy_type.global_command:global_command_association
 - legacy_type.global_command_ctr:global_command_ctr
 - legacy_type.impl:global_command_impl
 - rc.utils:utils.module
 - resource.constructor_creg:constructor_creg.service
 associations:
-- _type: legacy_type.code_registry:association
-  service: resource.constructor_creg:constructor_creg.service
-  type: legacy_type.global_command_ctr:global_command_ctr
-  function: construct
+
+- bases:
+  - resource.constructor_creg:constructor_creg.service
+  - legacy_type.global_command_ctr:global_command_ctr
+  key:
+  - resource.constructor_creg:constructor_creg.service
+  - legacy_type.global_command_ctr:global_command_ctr
+  value: construct
+
 definitions:
   construct:
     _type: legacy_type.builtin:attribute
