--- a/hyperapp/rc/import_discoverer.resources.yaml
+++ b/hyperapp/rc/import_discoverer.resources.yaml
@@ -3,14 +3,16 @@ import:
   - legacy_type.builtin:attribute
   - legacy_type.import_discoverer:import_discoverer
   - legacy_type.import_discoverer:using_incomplete_object
-  - legacy_type.builtin:python_object_association
   - legacy_type.builtin:python_module
 
 associations:
 
-- _type: legacy_type.builtin:python_object_association
-  t: legacy_type.import_discoverer:import_discoverer
-  function: ImportDiscoverer
+- bases:
+  - legacy_type.import_discoverer:import_discoverer
+  key:
+  - builtin_service:python_object_creg
+  - legacy_type.import_discoverer:import_discoverer
+  value: ImportDiscoverer
 
 definitions:
 
