--- a/hyperapp/rc/import_recorder.resources.yaml
+++ b/hyperapp/rc/import_recorder.resources.yaml
@@ -1,15 +1,17 @@
 import:
-  - builtin_service:python_object_creg
-  - legacy_type.builtin:attribute
-  - legacy_type.import_recorder:import_recorder
-  - legacy_type.builtin:python_object_association
-  - legacy_type.builtin:python_module
+- builtin_service:python_object_creg
+- legacy_type.builtin:attribute
+- legacy_type.import_recorder:import_recorder
+- legacy_type.builtin:python_module
 
 associations:
 
-- _type: legacy_type.builtin:python_object_association
-  t: legacy_type.import_recorder:import_recorder
-  function: ImportRecorder
+- bases:
+  - legacy_type.import_recorder:import_recorder
+  key:
+  - builtin_service:python_object_creg
+  - legacy_type.import_recorder:import_recorder
+  value: ImportRecorder
 
 definitions:
 
