--- a/hyperapp/rc/meta_association_ctr.resources.yaml
+++ b/hyperapp/rc/meta_association_ctr.resources.yaml
@@ -8,11 +8,7 @@ import:
 - legacy_type.builtin:python_module
 - legacy_type.code_registry:association
 - resource.constructor_creg:constructor_creg.service
-associations:
-- _type: legacy_type.code_registry:association
-  service: resource.constructor_creg:constructor_creg.service
-  type: legacy_type.attr_constructors:meta_association
-  function: construct
+associations: []
 definitions:
   construct:
     _type: legacy_type.builtin:attribute
