--- a/hyperapp/rc/object_command_ctr.resources.yaml
+++ b/hyperapp/rc/object_command_ctr.resources.yaml
@@ -5,7 +5,6 @@ import:
 - builtin_service:types
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
-- legacy_type.code_registry:association
 - legacy_type.command:object_commands_d
 - legacy_type.impl:object_command_impl
 - legacy_type.lcs:lcs_set_association
@@ -13,10 +12,15 @@ import:
 - rc.utils:utils.module
 - resource.constructor_creg:constructor_creg.service
 associations:
-- _type: legacy_type.code_registry:association
-  service: resource.constructor_creg:constructor_creg.service
-  type: legacy_type.object_command_ctr:object_command_ctr
-  function: construct
+
+- bases:
+  - resource.constructor_creg:constructor_creg.service
+  - legacy_type.object_command_ctr:object_command_ctr
+  key:
+  - resource.constructor_creg:constructor_creg.service
+  - legacy_type.object_command_ctr:object_command_ctr
+  value: construct
+
 definitions:
   construct:
     _type: legacy_type.builtin:attribute
