--- a/hyperapp/rc/service_ctr.resources.yaml
+++ b/hyperapp/rc/service_ctr.resources.yaml
@@ -7,13 +7,17 @@ import:
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
-- legacy_type.code_registry:association
 - resource.constructor_creg:constructor_creg.service
 associations:
-- _type: legacy_type.code_registry:association
-  service: resource.constructor_creg:constructor_creg.service
-  type: legacy_type.attr_constructors:service
-  function: construct
+
+- bases:
+  - resource.constructor_creg:constructor_creg.service
+  - legacy_type.attr_constructors:service
+  key:
+  - resource.constructor_creg:constructor_creg.service
+  - legacy_type.attr_constructors:service
+  value: construct
+
 definitions:
   construct:
     _type: legacy_type.builtin:attribute
