--- a/hyperapp/resource/call.resources.yaml
+++ b/hyperapp/resource/call.resources.yaml
@@ -1,13 +1,18 @@
 import:
 - builtin_service:python_object_creg
 - legacy_type.builtin:attribute
-- legacy_type.builtin:python_object_association
 - legacy_type.builtin:python_module
 - legacy_type.call:call
+
 associations:
-- _type: legacy_type.builtin:python_object_association
-  t: legacy_type.call:call
-  function: python_object
+
+- bases:
+  - legacy_type.call:call
+  key:
+  - builtin_service:python_object_creg
+  - legacy_type.call:call
+  value: python_object
+
 definitions:
   call.module:
     _type: legacy_type.builtin:python_module
