--- a/hyperapp/resource/mock_module.resources.yaml
+++ b/hyperapp/resource/mock_module.resources.yaml
@@ -1,15 +1,17 @@
 import:
 - builtin_service:python_object_creg
 - legacy_type.builtin:attribute
-- legacy_type.builtin:python_object_association
 - legacy_type.mock_module:mock_module
 - legacy_type.builtin:python_module
 
 associations:
 
-- _type: legacy_type.builtin:python_object_association
-  t: legacy_type.mock_module:mock_module
-  function: python_object
+- bases:
+  - legacy_type.mock_module:mock_module
+  key:
+  - builtin_service:python_object_creg
+  - legacy_type.mock_module:mock_module
+  value: python_object
 
 definitions:
   mock_module.module:
