--- a/hyperapp/transport/rsa_identity.resources.yaml
+++ b/hyperapp/transport/rsa_identity.resources.yaml
@@ -6,7 +6,6 @@ import:
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
-- legacy_type.code_registry:association
 - legacy_type.rsa_identity:rsa_identity
 - legacy_type.rsa_identity:rsa_parcel
 - legacy_type.rsa_identity:rsa_peer
@@ -16,22 +15,39 @@ import:
 - transport.identity:peer_registry.service
 - transport.identity:signature_registry.service
 associations:
-- _type: legacy_type.code_registry:association
-  service: transport.identity:identity_registry.service
-  type: legacy_type.rsa_identity:rsa_identity
-  function: rsa_identity_from_piece
-- _type: legacy_type.code_registry:association
-  service: transport.identity:parcel_registry.service
-  type: legacy_type.rsa_identity:rsa_parcel
-  function: rsa_parcel_from_piece
-- _type: legacy_type.code_registry:association
-  service: transport.identity:peer_registry.service
-  type: legacy_type.rsa_identity:rsa_peer
-  function: rsa_peer_from_piece
-- _type: legacy_type.code_registry:association
-  service: transport.identity:signature_registry.service
-  type: legacy_type.rsa_identity:rsa_signature
-  function: rsa_signature_from_piece
+
+- bases:
+  - transport.identity:identity_registry.service
+  - legacy_type.rsa_identity:rsa_identity
+  key:
+  - transport.identity:identity_registry.service
+  - legacy_type.rsa_identity:rsa_identity
+  value: rsa_identity_from_piece
+
+- bases:
+  - transport.identity:parcel_registry.service
+  - legacy_type.rsa_identity:rsa_parcel
+  key:
+  - transport.identity:parcel_registry.service
+  - legacy_type.rsa_identity:rsa_parcel
+  value: rsa_parcel_from_piece
+
+- bases:
+  - transport.identity:peer_registry.service
+  - legacy_type.rsa_identity:rsa_peer
+  key:
+  - transport.identity:peer_registry.service
+  - legacy_type.rsa_identity:rsa_peer
+  value: rsa_peer_from_piece
+
+- bases:
+  - transport.identity:signature_registry.service
+  - legacy_type.rsa_identity:rsa_signature
+  key:
+  - transport.identity:signature_registry.service
+  - legacy_type.rsa_identity:rsa_signature
+  value: rsa_signature_from_piece
+
 definitions:
   generate_rsa_identity:
     _type: legacy_type.builtin:attribute
