--- a/hyperapp/ui/ui_ctl_association.resources.yaml
+++ b/hyperapp/ui/ui_ctl_association.resources.yaml
@@ -7,10 +7,7 @@ import:
 - legacy_type.builtin:python_module
 - legacy_type.ui:ctl_association
 - ui.ui_ctl_registry:ui_ctl_creg.service
-associations:
-- _type: legacy_type.builtin:meta_association
-  t: legacy_type.ui:ctl_association
-  fn: register_ctl_association
+associations: []
 definitions:
   register_ctl_association:
     _type: legacy_type.builtin:attribute
